# CMakeLibraryExample

./: CMakeLists.txt
include/: library.h
src/: library.c
